2007-02-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: emacs/kahua.el
	  Now run-kahua also work with ssh for remote Kahua.
	  It works very similarly to run-kahua-shell.

	* Change: emacs/kahua.el
	  Now run-kahua-shell prompt your site bundle, and work
	  directory completion.
	  If you specify host, user(for ssh access), or site bundle,
	  The value is used as default value at next time.

2007-02-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: skel/configure.ac, skel/INSTALL, skel/Makefile.in,
	          skel/proj/proj.css, skel/proj/proj.kahua,
	          skel/proj/version.kahua.in, skel/proj.conf.in,
	          skel/test/test.conf.in, skel/test/test.scm.in
	  Don't do "keyword substitution" when check in.


	* Fix: skel/INSTALL
	  Update description.

2007-01-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-httpd.scm
	  If HTTP client sends request and close connection immediately,
	  kahua-httpd couldn't recover the error properly.
	  Reported by Petter Egesund.

2007-01-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/persistence/efs.scm
	  Fix a wrong keyword.

	* Change: src/kahua/developer.scm, src/kahua/error-report.scm
	  Replace with-error-handler with guard macro.

2007-01-22  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/persistence/dbi.scm
	  Lack of connection-of argument.
	  Arrange with-dbi-transaction to more simple.

	* Fix: src/kahua/persistence/postgresql.scm
	  Passed a wrong keyword.

2007-01-18  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.1 released.

	* New: doc/GaucheForKahua.ja

	* Update: INSTALL, doc/Setup.ja, skel/INSTALL, skel/configure.ac

	* Fix: src/kahua/persistence.scm
	  Now any value that can be serialized, can
	  also be used as index value.

2007-01-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: skel/proj.conf.in, skel/proj/proj.kahua,
	          skel/proj/version.kahua, skel/test/test.conf.in
	          skel/test/test.scm.in
	  Change file encoding from euc-jp to utf-8.
